# ai-limits

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  package-lock.json  package.json
.github/workflows/: commit-message-check.yml  desktop-build.yml
docs/: architecture.md  backlog.md  config.md  desktop-build-release.md  get-limits.md  notifications.md  os-permissions.md  product.md  runtime-schemas.md  stack.md  structured-info.md  tauri-ui.md  tauri.md  terminal-ui.md  testing.md  time-display.md
docs/claude/: limits.md
docs/codex/: limits.md
docs/competitors/: _INDEX.yaml  _flow.md  router-for-me.md
docs/devops/: README.md  artifact-verification-temp.md  ci-artifacts.md  dev.md  github-builds.md  github-releases.md  icons.md  local-build.md  macos-signing.md  principles-and-risks.md  release.md  versioning.md
docs/get-info/: README.md  source-chains.md  structured-info.md  todo.md
docs/providers/: claude.md  codex.md  cursor.md
docs/references/: _INDEX.yaml  _flow.md  ccusage.md  claude-code-usage-monitor.md  claude-usage.md  cpa-manager-plus.md  cpa-usage-keeper.md  cursor-api2-cursor-sh.md  llmeter.md  router-for-me.md
frontend/: index.html  styles.css
scripts/: check-commit-message.sh  macos-signing-secrets.example  setup-contributor.sh  tauri-clean-dev-assets.sh  tauri-dev-server.sh  verify-macos-app.sh
src/: get_limits.rs  lib.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  notifications.rs
(+42 files in other folders)
