[package]
name = "ai-limits"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "src-tauri"]
resolver = "2"

[[bin]]
name = "ai-limits"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
